I fixed the text not wrapping in the parent div

--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -7,4 +7,5 @@ li.card--children {
     border: 1px solid #ddcfcf;
     border-radius: 4px;
     font-size: 20px;
+    word-break: break-all;
 }
